# Python_Password_Manager_2FA

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt
password_manager/: auth.py  cli.py  crypto.py  exceptions.py  main.py  password_entry.py  storage.py
password_manager/auth/: __init__.py  login.py  register.py
password_manager/data/: password_manager.db
password_manager/model/: __init__.py  auth_session.py
password_manager/storage/: __init__.py  db.py  groups.py  password_entries.py  users.py
password_manager/utils/: clipboard.py
password_manager/vault/: add_password.py  groups.py  list_passwords.py  password_generator.py  password_generator_flow.py
tests/: conftest.py  test_add_password_flow.py  test_auth.py  test_auth_session.py  test_cli_authenticated.py  test_clipboard.py  test_crypto.py  test_groups_flow.py  test_groups_storage.py  test_list_passwords.py  test_login_failures.py  test_main.py  test_password_entries_storage.py  test_password_generator.py  test_password_generator_flow.py  test_password_genration.py  test_register_login.py  test_storage.py  test_update_and_delete_password_entry.py  test_users_storage.py  test_vault_flows.py
